qttools-opensource-src (5.15.1-3) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 22 Nov 2020 13:10:25 +0100

qttools-opensource-src (5.15.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 28 Oct 2020 21:54:16 +0300

qttools-opensource-src (5.15.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.15.1.
  * Update symbols files from buildds’ logs.
  * Update install files for the new release.
  * Update to debhelper compat level 13.
    - Drop dh_missing override, --fail-missing is now default behavior.
    - Use ${DEB_HOST_MULTIARCH} substitution in the install files.
  * Update debian/copyright.
    - Fix Lintian wildcard-matches-nothing-in-dep5-copyright warning by
      swapping two entries.
  * Update symbols files from the current build logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 14 Sep 2020 19:07:08 +0300

qttools-opensource-src (5.14.2-3) unstable; urgency=medium

  * Update symbols files for GCC 10 (closes: #966953).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 03 Aug 2020 17:52:03 +0300

qttools-opensource-src (5.14.2-2) unstable; urgency=medium

  * Update list of architectures where clang is available: remove
    kfreebsd-any, add riscv64.
  * Use debian/clean instead of overriding dh_auto_clean.
  * Do not install Qt5DocToolsConfig*.cmake when qdoc is not built.
  * Bump libqt5webkit5-dev build-dependency to 5.212.0~alpha4-3.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 24 Jun 2020 13:14:06 +0300

qttools-opensource-src (5.14.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.14.2.
  * Drop both qdoc patches, applied upstream.
  * Enable qwebview designer plugin building on riscv64.
  * Update debian/libqt5designercomponents5.symbols from buildds’ logs.
