@@ -1,5 +1,8 @@
 qttools-opensource-src (5.15.1-3) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Ship all the available icons of assistant, designer, and linguist; ship them
+    in the global hicolor icon theme rather than the legacy pixmaps location.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 22 Nov 2020 13:10:25 +0100
 
